# assistant

./: .gitignore  README.md  _env  pyproject.toml  setup.cfg
src/assistant/: assistant.py  conversation.py  env.py  environment.py  file.py  main.py  util.py
src/computer/: assistant.py  config.py  conversation.py  environment.py  file.py  main.py  util.py
src/taskagent/: env.py  llm.py  main.py
src/tools/: __init__.py  bibtex.py  simple.py
