[tool.poetry]
name = "computer"
version = "0.1.0"
description = "Computer assistant"
authors = ["Miki Yutani <mkyutani@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mkyutani/computer"
keywords = ["openai", "chatgpt", "assistant"]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
openai = "^1.3.7"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
computer = "computer.main:main"