[metadata]
name = taskagent
version = 0.1.0
author = Miki Yutani
author_email = mkyutani@gmail.com
description = Task agent by prompts with large language model (LLM)
long_description = file: README.md
keywords = task,agent,prompt,large language model,LLM
license = Apache License Version 2.0

[options]
zip_safe = False
package_dir = =src
packages = find:
install_requires =
    openai
    langchain
    python-dotenv
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    taskagent=taskagent.main:main