[metadata]
name = assistant
version = 0.1.0
author = Miki Yutani
author_email = mkyutani@gmail.com
description = assistant by chat powerd by OpenAI Assistants API
long_description = file: README.md
keywords = assistant,prompt,openai,api,large language model,LLM
license = Apache License Version 2.0

[options]
zip_safe = False
package_dir = =src
packages = find:
install_requires =
    loguru
    openai
    python-dotenv
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    assistant=assistant.main:main